--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   </head>
   <body>
     <div data-content="0" class="game-board"></div>
+    <form id="wallSet">
+      <input id="wallSetTxt" type="text" />
+      <label for="wallSetTxt">Wall Set Number</label>
+    </form>
   </body>
 </html>
