update settings contols

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
   <body>
     <div data-content="0" class="game-board"></div>
     <form id="wallSet">
-      <input id="wallSetTxt" type="text" />
+      <select id="wallSetTxt">
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+      </select>
       <label for="wallSetTxt">Wall Set Number</label>
     </form>
   </body>
