--- a/index.html
+++ b/index.html
@@ -13,14 +13,44 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="btn-wrapper">
+      <button class="btn" id="pause-btn">Pause</button>
+      <button class="btn" id="settings-btn">Settings</button>
+    </div>
     <div data-content="0" class="game-board"></div>
-    <form id="wallSet">
-      <select id="wallSetTxt">
-        <option value="0">0</option>
-        <option value="1">1</option>
-        <option value="2">2</option>
-      </select>
-      <label for="wallSetTxt">Wall Set Number</label>
-    </form>
+
+    <div class="gameOver-modal">
+      <div class="modal-container">
+        <p id="gameOver"></p>
+        <button id="reset-btn" type="button">Reset</button>
+      </div>
+    </div>
+    <div class="settings-modal">
+      <span class="close">X</span>
+      <div class="modal-container">
+        <form id="settings">
+          <label for="startSpeed">Starting speed of snake (min: 1 max: 15)</label>
+          <input type="number" min="1" max="15" id="startSpeed" />
+          <label for="speedInt">After how many points does speed increase</label>
+          <input type="number" min="5" max="50" step="5" id="speedInt" />
+          <label for="speedInc">How much does snake speed up</br>(Min:0 (Snake never speeds up)  Max:5 (Snake speed increases by 5) </label>
+          <input type="number" min="0" max="5" step="1" id="speedInc" />
+          <label for="growth">How quickly does snake grow when food is eaten</br>(min: 1 max: 5)</label>
+          <input type="number" min="1" max="5" step="1" id="growth" />
+          <label for="food">How much new food spawns once all collected</br>(min: 1 max: 5)</label>
+          <input type="number" min="1" max="5" step="1" id="food" />
+          
+          
+          <label for="wallSetTxt">Wall Set Number</label>
+          <select class="opt" id="wallSetTxt">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+          </select>
+          <input id="default-btn" type="button" value="Default Settings" />
+          <input id="close-btn" type="button" value="Close Settings" />
+        </form>
+      </div>
+    </div>
   </body>
 </html>
