--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       <button class="btn" id="settings-btn">Settings</button>
     </div>
     <div data-content="0" class="game-board"></div>
-
+    
+<div class="joystick">
+	<img src="images/joystick-base.png"/>
+	<div id="stick1" >
+	<img src="images/joystick-blue.png"/>		
+	</div>
+</div>
     <div class="gameOver-modal">
       <div class="modal-container">
         <p id="gameOver"></p>
